# memory-master

./: .gitignore  127.0.0.1:7890  INSTALL.md  README.md  SKILL.md  examples.py  memory_master.py  memory_master_workspace.py  package.json  pyproject.toml
adapters/: memory_skill_adapter.py
contracts/: skill_contracts.py
core/: memory_core.py
daemon/: insight_extractor.py  memory_master_daemon.py
docs/: check_memory_config.py
examples/: pipeline_demo.py  sample_pipeline.json
memory_master.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
scripts/: daily_distillation_workflow.md  dedup.mjs  heartbeat_auto_consolidation.md  memory_manager.py  skill_registry_workflow.md
skill-memory-master/: SKILL.md  manifest.json
tests/: test_build_and_parallel.py  test_heartbeat_integration.py  test_insight_extractor.py  test_memory_defaults.py  test_memory_descriptor_alignment.py  test_memory_search.py  test_memory_smoke.py  test_packaging_and_policy.py  test_recall_integration.py  test_registry_and_demo.py  test_resume_and_uri.py  test_runner_and_retry.py  test_todos_integration.py  test_validation_and_history.py  test_workspace_entrypoint.py  test_workspace_heartbeat_smoke.py  test_workspace_recall_smoke.py  test_workspace_smoke.py  test_workspace_todos_smoke.py
workflow_engine/: __init__.py  context.py  persistence.py  pipeline.py  registry.py  runner.py  uri.py  validation.py
